back-metodo-post-listagem-frotn
Back-end foi passado para receber post e não get.
o front foi melhorado o estilo de listagem
