# search/search/src/main/java/com/elasticsearch/search/dto/SearchRequest.java
@@ -1,0 +1,41 @@
+package com.elasticsearch.search.dto;
+
+public class SearchRequest {
+    private String q;
+    private Integer p;
+    private Integer cl;
+    private Integer itemsPerPage;
+
+    // Getters e Setters
+    public String getQ() {
+        return q;
+    }
+
+    public void setQ(String q) {
+        this.q = q;
+    }
+
+    public Integer getP() {
+        return p;
+    }
+
+    public void setP(Integer p) {
+        this.p = p;
+    }
+
+    public Integer getCl() {
+        return cl;
+    }
+
+    public void setCl(Integer cl) {
+        this.cl = cl;
+    }
+
+    public Integer getItemsPerPage() {
+        return itemsPerPage;
+    }
+
+    public void setItemsPerPage(Integer itemsPerPage) {
+        this.itemsPerPage = itemsPerPage;
+    }
+}
